--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   border: 1px solid black;
-  margin-top: 20px;
+  margin-top: 1%;
 }
 
 #buttons {
@@ -24,7 +24,7 @@ body {
   flex-direction: row;
   justify-content: space-evenly;
   width: 300px;
-  margin-top: 20px;
+  margin-top: 1%;
 }
 
 .button {
@@ -39,7 +39,7 @@ body {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin-top: 10px;
+  margin-top: 1%;
 }
 
 .tile {
@@ -54,10 +54,52 @@ body {
 }
 
 #img {
-  width: 170px;
-  height: 170px;
+  background-image: url('../img/cat.jpg');
+  background-size: 170px;
+  position: absolute;
+  height: 100%;
 }
 
 #timer {
   margin-top: 1%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 20px;
+  background-color: blue;
+  display: flex;
+  justify-content: center;
+}
+
+#footer a {
+  color: white;
+  text-decoration: none;
+}
+
+tr,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center;
+}
+
+table {
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center;
+  width: 23vw;
+  margin-top: 2%;
+}
+
+#img-box {
+  position: relative;
+  width: 170px;
+  height: 170px;
 }
